# aura

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  MEMORY.md  P0_ant_colony.md  README  README.md  aura.rkt  build.py  compile_commands.json  core  docker-compose.yml  info.rkt  main.rkt  pyproject.toml  requirements-dev.txt  run_all_bench.sh  run_ds.sh  run_ds_final.sh  run_mm.sh  run_mm_final.sh
.githooks/: pre-commit  pre-push
.github/: Dockerfile.ci  dependabot.yml  pull_request_template.md
build_debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_gdb/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build_o0/: CMakeCache.txt
build_rel/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cmake/: AuraCoverage.cmake  AuraDomainTests.cmake  AuraIssueBundles.cmake  AuraModules.cmake  AuraTest.cmake  aura_module_launcher.sh
docs/: ARCHITECTURE.md  CHANGELOG-v2.0-prep.md  DESIGN.md  PRODUCTION_ISSUES_TRACKER_REFINED.md  README.md  REVIEW_2026_05_12.md  REVIEW_cpp_backend_2026_05_13.md  REVIEW_cpp_deepdive_2026_05_13.md  REVIEW_typesystem_2026_05_13.md  ROADMAP-HARDWARE.md  ROADMAP.md  SERIALIZATION.md  agent-migration-guide.md  agent-orchestration-status.md  agent-prompt-template.md  agent-safety-mechanisms-simplification.md  ai_agent_protocol.md  api-reference.md  architecture.md  ast_to_source.md  aura_language_plan.md  aura_query_engine.md  aura_query_review.md  aura_reflection.md  aura_reflection_plan.md  aura_tree_grow.md  aura_typesystem.md  aura_typesystem_formal.md  auto-evolve.md  benchmark.md  benchmarks_game.md  caas_integration.md  ci-performance.md  ci-platforms.md  contributing.md  cpp26_guide.md  cycle14-reflect-module-status.md  eda.md  error_handling.md  ffi_closure_dispatch_fix.md  (+39 more)
examples/: cyber_cat.aura  snake.aura  tetris.aura
fuzz_seed_corpus/: edge_deep_nest_100_ba4d7da54c9b.sexpr  edge_deep_nest_200_43099347b616.sexpr  edge_deep_nest_50_97e3d20e7ecd.sexpr  edge_match_many_9d32dbac307b.sexpr  edge_qq_splice_017e63796cea.sexpr  edge_str_escapes_4517f9d8e8f0.sexpr  edge_unicode_mixed_f37b961a4008.sexpr  stdlib_0001_dc1dcddae65b.sexpr  stdlib_0003_479f38513320.sexpr  stdlib_0004_37fa84acc82f.sexpr  stdlib_0011_9e5fbc50dee9.sexpr  stdlib_0012_65df6de7413a.sexpr  stdlib_0036_a3dd567e4aa9.sexpr  stdlib_0039_719e4396764e.sexpr  stdlib_0044_9c33cfc44fb6.sexpr  stdlib_0048_03b47dabe07d.sexpr  stdlib_0060_d1579d823753.sexpr  stdlib_0072_4ff9e8503879.sexpr  stdlib_0076_2d80e7b420a2.sexpr  stdlib_0080_08f6c2b14aae.sexpr  stdlib_0081_684e8d9e5f7b.sexpr  stdlib_0097_c923091ae02f.sexpr  stdlib_0099_b256b01c9405.sexpr  stdlib_0101_76963091b96e.sexpr  stdlib_0107_76178ace8cc9.sexpr  stdlib_0117_26b79309601e.sexpr  stdlib_0125_481a7db8c9ef.sexpr  stdlib_0129_8213cc79d45e.sexpr  stdlib_0130_dae1e67e7d3f.sexpr  stdlib_0133_7c643a82ef33.sexpr  stdlib_0136_062417026237.sexpr  stdlib_0137_d85a5414a41d.sexpr  stdlib_0147_f2b7fe693927.sexpr  stdlib_0148_466d6a9b5c8c.sexpr  stdlib_0152_d4b348c8266a.sexpr  stdlib_0154_c7e87188c982.sexpr  stdlib_0156_afdbe6bf6ac4.sexpr  stdlib_0157_d1224129716b.sexpr  stdlib_0161_40c05838741b.sexpr  stdlib_0171_0eea6218a33c.sexpr  (+74 more)
lang/: abf.rkt  expander.rkt  reader.rkt
lib/: runtime.c  runtime.h
memory/: 2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md
projects/: GAPS.md  README.md  pipeline.aura
reflect/: abf_reader_registry.hh  abf_serialize.hh  read_auto.hh  read_auto_validate.hh  reflect_schema.hh  tag_dispatch.hh
scripts/: audit_catch_silent_swallow.py  audit_dead_bump_methods.py  audit_dead_bumps.py  audit_dead_heap_push.py  audit_safety_critical_bumps.py  audit_standalone_targets.py  check_aot_hot_update_coverage.py  check_aot_hot_update_incremental_coverage.py  check_apply_closure_epoch_stale_coverage.py  check_arena_auto_compact_intelligent_1919.py  check_bridge_epoch_atomic_coverage.py  check_c_string_escape_coverage.py  check_closure_bridge_epoch_freed_check.py  check_dead_bump_rate.py  check_file_size.py  check_fine_dirty_relower_coverage.py  check_gc_heap_lock_scope_coverage.py  check_incremental_relower_coverage.py  check_ir_hygiene_full_pipeline_coverage.py  check_ir_soa_phase2_adoption_1920.py  check_jit_batch_deopt_clear_coverage.py  check_jit_critical_opcode_coverage.py  check_legacy_mutate_lock.py  check_macro_provenance_coverage.py  check_mutation_guard_coverage.py  check_mutation_stack_storage_coverage.py  check_naming_convention.py  check_orch_mvp_scope.py  check_orchestration_steal_boundary_coverage.py  check_owned_pair_slots_lock_coverage.py  check_panic_checkpoint_lifecycle_coverage.py  check_primitive_surface.py  check_reflect_edsl_coverage.py  check_runtime_stub_coverage.py  check_soa_dual_path_consistency_coverage.py  check_soa_view_enforcement_1918.py  check_test_binding.py  check_test_coverage.py  check_test_includes.py  check_workspace_epoch_migration.py  (+25 more)
src/: main.cpp  messaging_bridge.h  messaging_bridge_impl.cpp
tasks/: encoding_collision.aura
tests/: README.md  STRATEGY.md  _aura_harness.py  agent_demo.py  agent_demo.rkt  ai_agent_bench.py  ai_agent_demo.py  ai_agent_edsl.py  ai_agent_iter.py  ai_agent_llm.py  ai_agent_prompt.py  ai_agent_serve.py  arena_owner_invariant.py  auto_evolve_test.aura  bench.aura  bench_arena.sh  bench_coercion.aura  bench_coercion.py  bench_coercion_dce.py  bench_evo_kv.py  bench_evo_kv.sh  benchmark.py  benchmark_baseline.json  benchmark_cases.py  benchmark_ir_vs_tw.py  benchmark_self_evolution.aura  capability_test.aura  check_gradual.py  commercial_readiness_concurrency.aura  commercial_readiness_edsl.aura  commercial_readiness_eval_paths.aura  commercial_readiness_io_json_persist.aura  commercial_readiness_macros.aura  commercial_readiness_stdlib_adaptive.aura  commercial_readiness_stdlib_algorithm_iter.aura  commercial_readiness_stdlib_csv.aura  commercial_readiness_stdlib_data_types.aura  (+1201 more)
tests/import_std_demo/: CMakeLists.txt  main.cpp
(+2764 files in other folders)
